# aeconomia

./: .gitignore  .replit  Makefile  README.md  build_link_map.py  dashboard.py  pipeline.py  pyproject.toml  replit.md  requirements.txt  smoke_test.py  start.bat  test_system.py  universal_prompt.txt
app/: ai_client_gemini.py  ai_processor.py  categorizer.py  cleaners.py  cleanup.py  config.py  exceptions.py  extractor.py  feeds.py  html_utils.py  internal_linking.py  keys.py  logging_conf.py  logging_config.py  main.py  media.py  pipeline.py  rewriter.py  rss_builder.py  scraper.py  store.py  synthetic_rss.py  tags.py  wordpress.py
attached_assets/: Pasted-Voc-um-programador-s-nior-Gere-um-app-Python-3-11-de-produ-o-modular-com-testes-b-sicos-que--1755111698616_1755111698616.txt
data/: app.db.bak  internal_links.json
debug/: ai_response_20250930-155913.json  ai_response_20250930-160253.json  ai_response_20250930-160323.json  ai_response_20250930-160359.json  ai_response_20250930-160448.json  ai_response_20250930-161754.json  ai_response_20250930-161825.json  ai_response_20250930-161852.json  ai_response_20250930-182419.json  ai_response_20250930-182451.json  ai_response_20250930-182520.json  ai_response_20250930-182606.json  ai_response_20250930-182638.json  ai_response_20250930-182709.json  ai_response_20250930-182804.json  ai_response_20250930-183918.json  ai_response_20250930-183947.json  ai_response_20250930-185251.json  ai_response_20250930-185321.json  ai_response_20250930-185349.json  ai_response_20250930-185417.json  ai_response_20250930-185451.json  (+1635 more)
(+9 files in other folders)
